refactor: Adjust script path for GitHub Pages
Update the script source path from `/index.tsx` to `./index.tsx` in `index.html`. This change ensures the application correctly loads its main script when deployed to GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Activate Change Today Coaching</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -45,7 +44,7 @@
 </head>
   <body class="bg-slate-50 font-sans">
     <div id="root"></div>
-    <!-- Changed script type to "text/babel" to enable transpilation -->
-    <script type="text/babel" data-presets="react,typescript" data-type="module" src="/index.tsx"></script>
+    <!-- Changed script type to "text/babel" and path to be relative for GitHub Pages compatibility -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
