fix: Update coach image file format
Replaced the coach's profile image from PNG to JPG format. This change improves image loading performance and reduces file size.

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             </div>
             <div class="grid lg:grid-cols-5 gap-12 items-center">
                 <div class="lg:col-span-2">
-                    <img src="images/sophie1.png" alt="Coach Sophie Ashley" class="rounded-lg shadow-2xl object-cover w-full h-full aspect-[3/4]">
+                    <img src="images/sophie1.jpg" alt="Coach Sophie Ashley" class="rounded-lg shadow-2xl object-cover w-full h-full aspect-[3/4]">
                 </div>
                 <div class="lg:col-span-3">
                     <h2 class="text-3xl font-serif text-primary-dark mb-4">Hello, I'm Sophie Ashley.</h2>
