--- a/index.html
+++ b/index.html
@@ -412,7 +412,11 @@
             </div>
             <div class="grid lg:grid-cols-5 gap-12 items-center">
                 <div class="lg:col-span-2">
-                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=1888&auto=format&fit=crop" alt="Coach Sophie Ashley" class="rounded-lg shadow-2xl object-cover w-full h-full aspect-[3/4]">
+                    <img 
+                        src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        alt="Coach Sophie Ashley" 
+                        class="rounded-lg shadow-2xl object-cover w-full h-full aspect-[3/4]"
+                    >
                 </div>
                 <div class="lg:col-span-3">
                     <h2 class="text-3xl font-serif text-primary-dark mb-4">Hello, I'm Sophie Ashley.</h2>
